--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Home work</H1>
+    <H1>Home work1</H1>
     <script src="js/script.js"></script>
 </body>
 </html>
